[package]
name = "knitting_pattern"
version = "0.1.0"
authors = ["James Mahler <james.mahler@gmail.com>"]
edition = "2018"
description = "Compiles a pattern from file containing stitch text."
readme = "README.md"
homepage = "https://github.com/jamesmahler/knitting_pattern"
license-file = "LICENSE"
keywords = ["knitting", "knit"]

[dependencies]
knitting_parse = "0.1.3"
