[package]
name = "knitting_chart"
version = "0.2.2"
authors = ["James Mahler <james.mahler@gmail.com>"]
edition = "2021"
description = "Compiles a knitting chart from file containing stitch pattern."
readme = "README.md"
homepage = "https://github.com/jamesmahler/knitting_chart"
license-file = "LICENSE"
keywords = ["knitting", "knit"]

[dependencies]
knitting_parse = "0.3"
png = "0.17"
